# NLP-Assignment_3

./: .env.example  .gitattributes  .gitignore  README.md  Report.md  pyproject.toml  requirements.txt
artifacts/: sanity_check.json
artifacts/checkpoints/combined_10k_json300/: README.md  adapter_model.safetensors  training_runner_args.json
artifacts/checkpoints/stage1/: adapter_config.json  launch_command.txt  training_plan.json  training_runner_args.json
artifacts/checkpoints/stage1_10k/: README.md  adapter_config.json  adapter_model.safetensors  tokenizer.json  training_runner_args.json
artifacts/checkpoints/stage2/: adapter_config.json  launch_command.txt  training_plan.json
artifacts/checkpoints/stage2_10k/: README.md  (+3 more)
artifacts/evaluations/: summary_table.json
artifacts/logs/: stage1_723295.err
artifacts/manifests/: alpaca_prepare.json  teacher_generation_report.json  teacher_seed_prepare.json
configs/: ablation_combined.yaml  ablation_combined_infer.yaml  ablation_stage2_small.yaml  fallback_qwen3_utsa.yaml  full.yaml  full_phi35_utsa.yaml  sample.yaml
data/processed/: alpaca_eval.jsonl  teacher_eval.jsonl  teacher_seed_train.jsonl  teacher_train.jsonl
data/raw/: json_prompt_seeds_human_authored.json
data/sample/: alpaca_sample.json  json_prompt_seeds.json
hpc/: train_stage1.slurm  train_stage2.slurm
prompts/: judge_prompt.txt  teacher_system_prompt.txt
src/sequential_tuning/: __init__.py  cli.py  config.py  schemas.py  training_runner.py
src/sequential_tuning_assignment3.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+54 files in other folders)
